--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
          <div class="home-info">
             <img src="assets/Seasoned-removebg-preview.png" alt="">
             <button id="play-btn">Play</button>
+            <audio id="bg-music" autoplay loop>
+                <source src="assets/Masakan Hangat.mp3" type="audio/mpeg">
+            </audio>
             <button onclick="toggleMusic()">Music</button>
          </div>
          <p class="credits">Created by Nararya and Rayya</p>
          
     </div>
 
-    <audio id="bg-music" autoplay loop>
-        <source src="assets/music.mp3" type="audio/mpeg">
-    </audio>
+    
 
     <div id="loading-screen">
         <p>Loading...</p>
