--- a/game.html
+++ b/game.html
@@ -38,6 +38,10 @@
         >
           <img src="assets//pohon_caroot.png" alt="Ready-to-harvest carrot" />
         </div>
+
+        <div class="character-background protagonis undraggable">
+          <img src="assets/Protagonis.png" alt="Character" />
+        </div>
       </div>
 
       <!-- Basket -->
