cutting, cooking win

--- a/game.html
+++ b/game.html
@@ -31,12 +31,12 @@
           <img src="assets/Kunyit.png" alt="Ready-to-harvest turmeric" />
         </div>
         <div
-          class="plant carrot"
+          class="plant carrott"
           draggable="true"
           data-type="carrot"
           data-state="ready"
         >
-          <img src="assets//pohon_caroot.png" alt="Ready-to-harvest carrot" />
+          <img src="assets/pohon_caroot.png" alt="Ready-to-harvest carrot" />
         </div>
 
         <div class="character-background protagonis undraggable">
