--- a/planting.html
+++ b/planting.html
@@ -27,7 +27,10 @@
           <img src="assets/Protagonis.png" alt="Character" />
         </div>
 
-        
+        <!-- Watering Can -->
+        <div class="watering-can" draggable="true">
+          <img src="assets/Watering _can.png" alt="Watering Can" />
+        </div>
       </div>
     </div>
 
