win and lose condition

--- a/cooking.html
+++ b/cooking.html
@@ -42,6 +42,9 @@
         </div>
     </div>
 
+    <iframe src="audio.html" id="music-frame" style="display:none;"></iframe>
+
+
     <script src="js/cooking.js"></script>
 </body>
 </html>
