--- a/cutscene.html
+++ b/cutscene.html
@@ -28,6 +28,8 @@
 
     <button id="skip-button">Skip</button>
 
+    <iframe src="audio.html" id="music-frame" style="display:none;"></iframe>
+
 
     <script src="js/cutscene.js"></script>
 </body>
