--- a/cutscene3.html
+++ b/cutscene3.html
@@ -16,6 +16,8 @@
             <button id="next-button">Next</button>
         </div>
     </div>
+    <iframe src="audio.html" id="music-frame" style="display:none;"></iframe>
+
 
     <script src="js/cutscene3.js"></script>
 </body>
