--- a/cutting.html
+++ b/cutting.html
@@ -37,6 +37,8 @@
           </div>
           
     </div>
+    <iframe src="audio.html" id="music-frame" style="display:none;"></iframe>
+
 
     <script src="js/cutting.js"></script>
 </body>
