--- a/game.html
+++ b/game.html
@@ -59,6 +59,8 @@
         <button id="next-phase-btn">Continue to Planting</button>
       </div>
     </div>
+    <iframe src="audio.html" id="music-frame" style="display:none;"></iframe>
+
     
 
     <script src="js/game.js"></script>
