--- a/lose.html
+++ b/lose.html
@@ -9,7 +9,7 @@
 <body>
     <div class="game-over">
         <h1>Masakan Gosong! 😭</h1>
-        <img src="assets/burned_food.png" alt="Burned Dish">
+        <img src="assets/LOSE.png" alt="Burned Dish">
         <p>Masakanmu gosong... Mungkin lain kali lebih hati-hati ya!</p>
         <button onclick="window.location.href='index.html'">Back to Home</button>
     </div>
