--- a/minigame.html
+++ b/minigame.html
@@ -19,6 +19,9 @@
     <p id="cooking-status">Follow the steps to cook!</p>
     <button id="finish-btn" style="display:none;" onclick="finishGame()">Finish Cooking</button>
 
+    <iframe src="audio.html" id="music-frame" style="display:none;"></iframe>
+
+
     <script src="js/minigames.js"></script>
 </body>
 </html>
