--- a/sorting.html
+++ b/sorting.html
@@ -54,6 +54,9 @@
                 <button id="continue-btn">Continue</button>
             </div>
         </div>
+
+        <iframe src="audio.html" id="music-frame" style="display:none;"></iframe>
+
     </div>
 
     <script src="js/sorting.js"></script>
