--- a/planting.html
+++ b/planting.html
@@ -34,6 +34,9 @@
       </div>
     </div>
 
+    <iframe src="audio.html" id="music-frame" style="display:none;"></iframe>
+
+
     <script src="js/planting.js"></script>
   </body>
 </html>
