--- a/game.html
+++ b/game.html
@@ -50,13 +50,13 @@
       </div>
 
       <div id="transition-screen" class="hidden">
-        <p>Preparing the next phase...</p>
+        <p>Loading...</p>
       </div>
 
       <!-- Harvesting Completed Popup -->
       <div id="harvest-popup" class="popup hidden">
-        <p>You have finished harvesting!</p>
-        <button id="next-phase-btn">Continue to Planting</button>
+        <p>Hore! Panen sudah selesai! Ayo kita tanam lagi, biar hasilnya makin banyak!</p>
+        <button id="next-phase-btn">Tanam Lagi Yuk!</button>
       </div>
     </div>
     <iframe src="audio.html" id="music-frame" style="display:none;"></iframe>
