--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <audio id="bg-music" autoplay loop>
                 <source src="assets/Masakan Hangat.mp3" type="audio/mpeg">
             </audio>
-            <button id="music-btn" onclick="toggleMusic()">Music</button>
+            <!-- <button id="music-btn" onclick="toggleMusic()">Music</button> -->
 
          </div>
          <p class="credits">Created by Nararya and Rayya</p>
