adding hover effect on grabbable items

--- a/cooking.html
+++ b/cooking.html
@@ -8,11 +8,17 @@
 </head>
 <body>
     <div class="game-container-cooking">
-        <h2>Cook the Tempe!</h2>
-        <p>Drag and drop all ingredients into the pan before time runs out!</p>
+        <div class="cooking-container-prepare">
+            <h2 class="cooking-title-prepare">Bantu nenek masak Tempe Orek</h2>
+            <p class="cooking-instruction-prepare">Tarik semua bahan ke dalam panci sebelum waktunya habis!</p>
+        
+            <!-- Timer -->
+            <!-- <div id="timer-prepare">Time Left: <span id="time-left">15</span>s</div> -->
+            <div id="timer" class="timer-prepare">Time Left: <span id="time-left">15</span>s</div>
+        </div>
 
         <!-- Timer -->
-        <div id="timer">Time Left: <span id="time-left">15</span>s</div>
+        
 
         <!-- Pan (Drop Zone) -->
         <div class="pan" id="pan">
