--- a/cutscene3.html
+++ b/cutscene3.html
@@ -9,7 +9,7 @@
 <body>
     <div class="cutscene-container">
         <div id="cutscene-image">
-            <img id="scene-img" src="assets/grandma_thank_you.png" alt="Grandmother Saying Thank You">
+            <img id="scene-img" src="assets/cutscene9.PNG" alt="Grandmother Saying Thank You">
         </div>
         <div id="dialogue-box">
             <p id="dialogue-text">Makasih!</p>
