--- a/cutting.html
+++ b/cutting.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div class="game-container-cutting">
-        <h2>Prepare the Ingredients</h2>
-        <p>Drag the carrot onto the cutting board, then use the knife to cut it.</p>
+        <div class="cutting-container-ingredients">
+            <h2 class="cutting-title-ingredients">Bantu nenek siapkan bahan</h2> 
+            <p class="cutting-instruction-ingredients">Tarik wortel ke arah cutting board lalu tarik pisau ke arah wortel untuk memotongnya sebanyak 2 kali</p>
+        </div>
 
         <!-- Cutting Board (Drop Zone) -->
         <div class="cutting-board" id="cutting-board">
@@ -32,8 +34,8 @@
         </div>
 
         <div id="cutting-done-popup" class="popup hidden">
-            <p>Cutting is done! Time to cook!</p>
-            <button id="continue-button">Continue</button>
+            <p>Yey wortel sudah selesai dipotong</p>
+            <button id="continue-button">Lanjut</button>
           </div>
           
     </div>
