--- a/planting.html
+++ b/planting.html
@@ -9,9 +9,13 @@
   <body>
     <div class="game-container">
       <div class="garden">
-        <h2>Waktunya Bertanam</h2>
-        <p>Tarik benih ke kotak yang tersedia sesuai dengan jenis tanamanya</p>
-        
+        <div class="garden-container-planting">
+          <h2 class="garden-title-planting">Waktunya Bertanam</h2>
+          <p class="garden-instruction-planting">
+            Tarik benih ke kotak yang tersedia sesuai dengan jenis tanamanya
+          </p>
+        </div>
+
         <div class="plant chili undraggable">
           <img src="assets/Cabai_gundul.png" alt="chili plant" />
         </div>
@@ -40,7 +44,6 @@
             <button id="modal-close">OK</button>
           </div>
         </div>
-        
       </div>
     </div>
 
