--- a/cutscene.html
+++ b/cutscene.html
@@ -14,7 +14,7 @@
         </div>
         <div class="cutscene-frame" id="scene2">
             <img src="assets/cutscene2.png" alt="Protagonist riding a public transport">
-            <p>Dia naik angkot menuju desa di atas gunung...</p>
+            <p>Dia naik bis umum menuju desa di atas gunung...</p>
         </div>
         <div class="cutscene-frame" id="scene3">
             <img src="assets/cutscene3.png" alt="Arriving at Grandma's House">
