--- a/cutscene3.html
+++ b/cutscene3.html
@@ -7,18 +7,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="cutscene-container">
-        <div id="cutscene-image">
-            <img id="scene-img" src="assets/cutscene9.PNG" alt="Grandmother Saying Thank You">
-        </div>
-        <div id="dialogue-box">
-            <p id="dialogue-text">Makasih!</p>
-            <button id="next-button">Next</button>
-        </div>
+    <div class="cutscene-container-three">
+        <img id="scene-img-three" src="assets/cutscene9.PNG" alt="Grandmother Saying Thank You">
+        <p id="dialogue-text-three">Makasih!</p>
+        <button id="next-button-three">Next</button>
     </div>
     <iframe src="audio.html" id="music-frame" style="display:none;"></iframe>
-
-
     <script src="js/cutscene3.js"></script>
 </body>
 </html>
