--- a/win.html
+++ b/win.html
@@ -9,7 +9,7 @@
 <body>
     <div class="win-screen">
         <h1>Masak Sukses! 🎉</h1>
-        <img src="assets/family_dinner.png" alt="Family Dinner">
+        <img src="assets/WIN.png" alt="Family Dinner">
         <p>Seluruh keluarga menikmati hasil masakanmu! 🍛</p>
         <button onclick="window.location.href='index.html'">Back to Home</button>
     </div>
