done all the finishing

--- a/cooking.html
+++ b/cooking.html
@@ -10,15 +10,11 @@
     <div class="game-container-cooking">
         <div class="cooking-container-prepare">
             <h2 class="cooking-title-prepare">Bantu nenek masak Tempe Orek</h2>
-            <p class="cooking-instruction-prepare">Tarik semua bahan ke dalam panci sebelum waktunya habis!</p>
+            <p class="cooking-instruction-prepare">Tarik semua bahan ke dalam penggorengan sebelum waktunya habis!</p>
         
             <!-- Timer -->
-            <!-- <div id="timer-prepare">Time Left: <span id="time-left">15</span>s</div> -->
-            <div id="timer" class="timer-prepare">Time Left: <span id="time-left">15</span>s</div>
+            <div id="timer" class="timer-prepare">Time Left: <span id="time-left">10</span>s</div>
         </div>
-
-        <!-- Timer -->
-        
 
         <!-- Pan (Drop Zone) -->
         <div class="pan" id="pan">
@@ -47,8 +43,6 @@
             <button id="restart-button">Try Again</button>
         </div>
     </div>
-
-    <iframe src="audio.html" id="music-frame" style="display:none;"></iframe>
 
 
     <script src="js/cooking.js"></script>
