--- a/cutscene.html
+++ b/cutscene.html
@@ -10,25 +10,28 @@
     <div id="cutscene-container">
         <div class="cutscene-frame fade" id="scene1">
             <img src="assets/cutscene1.png" alt="Protagonist arriving at the bus terminal">
-            <p>[Protag] telah selesai kuliah dan ia pun pulang ke kampung halamannya...</p>
+            <p>Intan telah selesai kuliah dan ia pun pulang ke kampung halamannya...</p>
         </div>
         <div class="cutscene-frame" id="scene2">
             <img src="assets/cutscene2.png" alt="Protagonist riding a public transport">
-            <p>Dia naik bis umum menuju desa di atas gunung...</p>
+            <p>Dia naik bis umum menuju desa di lereng gunung...</p>
         </div>
         <div class="cutscene-frame" id="scene3">
             <img src="assets/cutscene3.png" alt="Arriving at Grandma's House">
             <p>Di sana, nenek dan keluarganya sudah menunggunya pulang...</p>
         </div>
         <div class="cutscene-frame" id="scene4">
-            <img src="assets/Nenek.png" alt="Grandmother smiling">
-            <p>"Ehh, cucu nenek akhirnya pulang juga!"</p>
+            <img src="assets/cutscene4.PNG" alt="Grandmother smiling">
+            <p>Mereka ingin mengadakan acara Slametan dan memasak nasi tumpeng sebagai tanda syukur karena Intan telah menamatkan kuliahnya...</p>
+        </div>
+        <div class="cutscene-frame" id="scene5">
+            <img src="assets/cutscene5.PNG" alt="Grandmother smiling">
+            <p>Esok paginya, Intan pergi ke pekarangan rumah untuk memanen beberapa bahan masakan</p>
         </div>
     </div>
 
     <button id="skip-button">Skip</button>
 
-    <iframe src="audio.html" id="music-frame" style="display:none;"></iframe>
 
 
     <script src="js/cutscene.js"></script>
