--- a/cutting.html
+++ b/cutting.html
@@ -10,7 +10,7 @@
     <div class="game-container-cutting">
         <div class="cutting-container-ingredients">
             <h2 class="cutting-title-ingredients">Bantu nenek siapkan bahan</h2> 
-            <p class="cutting-instruction-ingredients">Tarik wortel ke arah cutting board lalu tarik pisau ke arah wortel untuk memotongnya sebanyak 2 kali</p>
+            <p class="cutting-instruction-ingredients">Tarik wortel ke arah talenan lalu tarik pisau ke arah wortel untuk memotongnya sebanyak 2 kali</p>
         </div>
 
         <!-- Cutting Board (Drop Zone) -->
@@ -39,7 +39,6 @@
           </div>
           
     </div>
-    <iframe src="audio.html" id="music-frame" style="display:none;"></iframe>
 
 
     <script src="js/cutting.js"></script>
