--- a/game.html
+++ b/game.html
@@ -62,13 +62,11 @@
       <!-- Harvesting Completed Popup -->
       <div id="harvest-popup" class="popup hidden">
         <p>
-          Hore! Panen sudah selesai! Ayo kita tanam lagi, biar hasilnya makin
-          banyak!
+          Hore! Panen sudah selesai! ingat kata nenek habis panen jangan lupa nanam lagi ya, biar bumi tetap hijau
         </p>
         <button id="next-phase-btn">Tanam Lagi Yuk!</button>
       </div>
     </div>
-    <iframe src="audio.html" id="music-frame" style="display: none"></iframe>
 
     <script src="js/game.js"></script>
   </body>
