--- a/lose.html
+++ b/lose.html
@@ -11,7 +11,10 @@
         <h1>Masakan Gosong! 😭</h1>
         <img src="assets/LOSE.png" alt="Burned Dish">
         <p>Masakanmu gosong... Mungkin lain kali lebih hati-hati ya!</p>
-        <button onclick="window.location.href='index.html'">Back to Home</button>
+
+        <!-- Retry & Back to Home Buttons -->
+        <button onclick="window.location.href='cooking.html'">🔄 Coba Lagi</button>
+        <button onclick="window.location.href='index.html'">Kembali ke Beranda</button>
     </div>
 </body>
 </html>
