--- a/cutting.html
+++ b/cutting.html
@@ -1,46 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cut the Carrot</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <div class="game-container-cutting">
-        <div class="cutting-container-ingredients">
-            <h2 class="cutting-title-ingredients">Bantu nenek siapkan bahan</h2> 
-            <p class="cutting-instruction-ingredients">Tarik wortel ke arah talenan lalu tarik pisau ke arah wortel untuk memotongnya sebanyak 2 kali</p>
-        </div>
+      <!-- Instruction Section -->
+      <div class="cutting-container-ingredients">
+        <h2 class="cutting-title-ingredients">Bantu nenek siapkan bahan</h2>
+        <p class="cutting-instruction-ingredients">
+          Tarik wortel ke arah talenan lalu tarik pisau ke arah wortel untuk
+          memotongnya sebanyak 2 kali
+        </p>
+      </div>
 
-        <!-- Cutting Board (Drop Zone) -->
-        <div class="cutting-board" id="cutting-board">
-            <img src="assets/Board.png" alt="Cutting Board">
-        </div>
+      <!-- Cutting Board (Drop Zone) -->
+      <div class="cutting-board" id="cutting-board">
+        <img src="assets/Board.png" alt="Cutting Board" />
+      </div>
 
-        <!-- Carrot (Draggable) -->
-        <div class="carrot" id="carrot" draggable="true">
-            <img src="assets/whole_carrot.png" alt="Whole Carrot">
-        </div>
+      <!-- Carrot (Draggable) -->
+      <div class="carrot" id="carrot" draggable="true">
+        <img src="assets/whole_carrot.png" alt="Whole Carrot" />
+      </div>
 
-        <!-- Knife (Draggable, but only after placing carrot) -->
-        <div class="knife disabled" id="knife" draggable="true">
-            <img src="assets/knife.png" alt="Knife">
-        </div>
+      <!-- Knife (Draggable, but only after placing carrot) -->
+      <div class="knife disabled" id="knife" draggable="true">
+        <img src="assets/knife.png" alt="Knife" />
+      </div>
 
-        <!-- Transition Screen -->
-        <div id="transition-screen2" class="hidden">
-            <p>Cutting Complete! Moving to the next phase...</p>
-        </div>
+      <!-- Transition Screen -->
+      <div id="transition-screen2" class="hidden">
+        <p>Cutting Complete! Moving to the next phase...</p>
+      </div>
 
-        <div id="cutting-done-popup" class="popup hidden">
-            <p>Yey wortel sudah selesai dipotong</p>
-            <button id="continue-button">Lanjut</button>
-          </div>
-          
+
+      <!-- Popup -->
+      <div id="cutting-done-popup" class="popup hidden">
+        <p>Yey wortel sudah selesai dipotong</p>
+        <button id="continue-button">Lanjut</button>
+      </div>
+
     </div>
 
-
     <script src="js/cutting.js"></script>
-</body>
+  </body>
 </html>
