--- a/game.html
+++ b/game.html
@@ -11,6 +11,7 @@
       <!-- Garden Background -->
       <div class="garden">
         <div class="garden-container-harvest">
+          <!-- Instruction -->
           <h2 class="garden-title-harvest">Waktunya Panen</h2>
           <p class="garden-instruction-harvest">
             Tarik tanaman yang siap panen ke tampah!
