--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
             <img src="assets/Seasoned-removebg-preview.png" alt="">
             <button id="play-btn">Play</button>
          </div>
+         <!-- Credit -->
          <p class="credits">Created by Nararya and Rayya</p>
          
     </div>
 
+    <!-- Loading Screen -->
     <div id="loading-screen">
         <p>Loading...</p>
     </div>
 
     <script>
+        // Play button
         document.getElementById('play-btn').addEventListener('click', function() {
             window.location.href = 'cutscene.html'; // Goes to cutscene first
         });
