--- a/lose.html
+++ b/lose.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="game-over">
+        <!-- Game Over Message -->
         <h1>Masakan Gosong! 😭</h1>
         <img src="assets/LOSE.png" alt="Burned Dish">
         <p>Masakanmu gosong... Mungkin lain kali lebih hati-hati ya!</p>
