--- a/planting.html
+++ b/planting.html
@@ -9,6 +9,7 @@
   <body>
     <div class="game-container">
       <div class="garden">
+        <!-- Instruction Section -->
         <div class="garden-container-planting">
           <h2 class="garden-title-planting">Waktunya Bertanam</h2>
           <p class="garden-instruction-planting">
@@ -16,9 +17,12 @@
           </p>
         </div>
 
+        <!-- Pre-existing chili plant (Non-draggable) -->
         <div class="plant chili undraggable">
           <img src="assets/Cabai_gundul.png" alt="chili plant" />
         </div>
+
+        <!-- Draggable Seeds (Turmeric & Carrot) -->
         <div class="seed turmeric-seed" draggable="true" data-seed="turmeric">
           <img src="assets/turmeric_seed.png" alt="Turmeric Seed" />
         </div>
