--- a/cutscene3.html
+++ b/cutscene3.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Cutscene Container -->
     <div class="cutscene-container-three">
         <img id="scene-img-three" src="assets/cutscene9.PNG" alt="Grandmother Saying Thank You">
         <p id="dialogue-text-three">Makasih!</p>
